[package]
name = "hnclient"
version = "0.1.0"
authors = ["Rusty Shackleford <a@neb.best>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
reqwest = {version = "0.10"}
iced = "0.2"
iced_futures = "0.2"
# iced_native = "0.3"
webbrowser = "0.5.5"
chrono = "0.4.19"
# [target.'cg(target_arch="wasm")'.dependencies]